# ignitsol

./: .env  Dockerfile  app.py  config.py  docker-compose.yml  entrypoint.sh  main.py  pgdockerfile  pyproject.toml
DAOs/: baseDAO.py  booksDAO.py
models/: author.py  base_model.py  book_author.py  book_bookshelf.py  book_language.py  book_subject.py  books.py  bookshelf.py  format.py  language.py  subject.py
utils/: db.py  paginator.py
views/: book_views.py
