[tool.poetry]
name = "gutenberg"
version = "0.1.0"
description = ""
authors = ["Murtaza Lightwala <murtaza.lightwala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
pydantic = "^2.10.6"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
